src/objects/Outlok_Plan_Comercial__c.object
<CustomObject>
    <fields>
        <fullName>Cuenta__c</fullName>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Outlok_Plan_Comercial</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Previous_Fiscal_Year_Revenue__c</fullName>
        <label>Previous Fiscal Year</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Fiscal_Year__c</fullName>
        <label>Previous Fiscal Year</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SCP Outlook Plan Comercial</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre de SCP Outlook Plan Comercial</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCP Outlook Planes Comerciales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>